--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-HELP.md
 .gradle
 build/
+bin/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+
 
 ### STS ###
 .apt_generated
