--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 .gradle
-!build/libs/*.jar
-build/
 bin/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+build/*
+!build/libs
 
 
 ### STS ###
