--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
-spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
+# spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
+# spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
+# spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
