--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
 # spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
 # spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
-spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
