--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-# spring.datasource.url=${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/postgres}
-# spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
-# spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
-spring.datasource.url=jdbc:${JDBC_DATABASE_URL:postgresql://localhost:5432/postgres}
-spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
+spring.datasource.url=jdbc:${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
