--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,6 @@
 plugins {
-	id 'org.springframework.boot' version '2.1.8.RELEASE'
+	id 'org.springframework.boot' version '2.2.0.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
-	id 'org.asciidoctor.convert' version '1.5.8'
 	id 'java'
 }
 
@@ -9,12 +8,18 @@ group = 'org.matt'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
 
-repositories {
-	mavenCentral()
+configurations {
+	developmentOnly
+	runtimeClasspath {
+		extendsFrom developmentOnly
+	}
+	compileOnly {
+		extendsFrom annotationProcessor
+	}
 }
 
-ext {
-	set('snippetsDir', file("build/generated-snippets"))
+repositories {
+	mavenCentral()
 }
 
 dependencies {
@@ -22,32 +27,25 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
-	implementation 'commons-dbcp:commons-dbcp:1.4'
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 
 	// PMML
 	implementation 'org.jpmml:pmml-evaluator:1.4.13'
 	implementation 'org.jpmml:pmml-evaluator-extension:1.4.13'
 
 	// Lombok
-	implementation 'org.projectlombok:lombok:1.18.10'
-	annotationProcessor 'org.projectlombok:lombok:1.18.10'
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
+	
+	// Redis
+	implementation 'redis.clients:jedis:3.1.0'
 
 }
 
 test {
-	outputs.dir snippetsDir
-}
-
-asciidoctor {
-	inputs.dir snippetsDir
-	dependsOn test
-}
-
-configurations {
-	compile.exclude module: 'spring-boot-starter-logging'
+	useJUnitPlatform()
 }
