--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 spring.datasource.username=${JDBC_DATABASE_USERNAME:postgres}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD:postgres}
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://postgres:postgres@localhost:5432/postgres}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/postgres?user=postgres&password=postgres}
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
