--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,10 @@ spring.jpa.show-sql=true
 
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = create
 
 server.port=${PORT:8080}
 
+# Redis URL
+spring.redis.url=${REDIS_URL:redis://localhost:6379}
 
