--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ server.port=${PORT:8080}
 # Redis URL
 spring.redis.url=${REDIS_URL:redis://localhost:6379}
 
+# fix exception related to serialization
+spring.jackson.serialization.fail-on-empty-beans=false
