--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,8 +10,8 @@ spring.jpa.show-sql=true
 
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.initialization-mode=always
 
 server.port=${PORT:8080}
 
